<resources>
    <string name="app_name">Gift Code Claimer</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_sites">Sites</string>
    <string name="title_profiles">Profiles</string>
    <string name="title_settings">Settings</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="paste_and_claim">Paste \u0026 Claim</string>
    <string name="no_sites">No sites added yet. Tap + to add a site.</string>
    <string name="no_profiles">No profiles added yet. Tap + to add a profile.</string>
    <string name="status_stopped">Stopped</string>
    <string name="status_running">Running</string>
</resources>
